certs/test-ingresses/b-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-backend-test
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: randomdistrib
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: ingress-backend
    helm.sh/chart: randomdistrib-build-0.1.0

spec:
  rules:
  - host: "backend.coinflip.click"
    http:
      paths:
      - backend:
          serviceName: randomdistrib-backend
          servicePort: http
