certs/test-ingresses/backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-backend-nginx-ingress
  labels:
    app.kubernetes.io/name: test-backend-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "test-backend.coinflip.click"
      http:
        paths:
          - backend:
              serviceName: randomdistrib-backend
              servicePort: http
