certs/test-ingresses/gce-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-gce-ingress
  labels:
    app.kubernetes.io/name: test-gce-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: randomdistrib-frontend
              servicePort: http
