certs/test-ingresses/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-nginx-ingress
  labels:
    app.kubernetes.io/name: test-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - test.coinflip.click
    secretName: test-ingress-cert
  rules:
    - host: "test.coinflip.click"
      http:
        paths:
          - backend:
              serviceName: randomdistrib-frontend
              servicePort: http
